--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -14,18 +14,18 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [24.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v5
         with:
           node-version: ${{ matrix.node-version }}
-      - name: yarn install and lint
+      - name: npm install and lint
         run: |
-          yarn
+          npm install
           npx eslint ./src
         env:
           CI: true
